tests/ui/generic-associated-types/must-prove-where-clauses-on-norm.next.stderr
error: higher-ranked subtype error
  --> $DIR/must-prove-where-clauses-on-norm.rs:23:61
   |
LL |     let func: for<'a, 'b> fn((), &'b str) -> &'static str = foo::<()>;
   |                                                             ^^^^^^^^^

error: aborting due to 1 previous error

